added actual components

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body> 
-   
-   <div class="wrapper">
-      <!-- <a href="#" class="logo link">
+     <!-- <a href="#" class="logo link">
          <div class="logo__header">
             <span class="logo__header--left">Hell</span>
             <svg class="logo__icon">
@@ -43,11 +41,19 @@
             <span class="logo__footer--right">английский</span>
          </div>
       </a> -->
-      <button type="button" class="btn">Хочу на бесплатное занятие</button>
-      <a href="/logo.html">Перейти на страницу с Лого</a>
-   </div>
+      
 
-
+   <section class="hero">
+      <div class="container">
+         <div class="hero__top">
+            <h1 class="hero__title">Комплексная подготовка к ВНО<br> по английскому языку</h1>
+            <p class="hero__top-promo">Просто не будет.</p>
+            <p class="hero__bottom-promo">Но ты гарантировано наберешь <span>+25 баллов</span></p>
+            <button type="button" class="btn">хочу на бесплатное занятие</button>
+         </div>
+         <div class="hero__bottom"></div>
+      </div>
+   </section>
 
    <script src="./js/menu.js"></script>
    <script src="./js/modal.js"></script>
