--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                <p class="hero__top-promo">Просто не будет.</p>
                <p class="hero__bottom-promo">Но ты гарантировано наберешь <span>+25 баллов</span></p>
                <button type="button" class="btn">хочу на бесплатное занятие</button>
+               <img class="test-img" src="./images/girl-desktop.png" alt="">
             </div>
          </div>
       </div>
