--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       </p>
          </div>
    </section>
+   <section class="green"></section>
 
    <script src="./js/menu.js"></script>
    <script src="./js/modal.js"></script>
