added mobile menu without styles

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </a> -->
       
 
-   <section class="hero">
+   <!-- <section class="hero">
       <div class="hero__wrapper">
          <div class="container">
             <div class="hero__body">
@@ -60,6 +60,93 @@
          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus expedita ipsa minus facilis ipsum delectus optio vitae a natus distinctio asperiores perspiciatis quo commodi, voluptas aperiam explicabo! Eveniet at dolore, illo obcaecati animi placeat fugiat illum inventore quisquam quam repellat incidunt id sequi deserunt, vel ab provident? Accusamus dicta harum blanditiis quibusdam et sed sit velit odio odit ex tempora vel eos eveniet repellendus eaque reprehenderit aperiam necessitatibus dolor eius quia quae sequi, libero, in autem. Eveniet velit, consectetur et vero iste omnis, rerum repellendus libero nemo ea beatae quisquam dolor dolorum optio. Maiores expedita quisquam consequatur eius at hic, qui ullam architecto vel repudiandae, quod accusantium ipsum veniam nam animi cum dolor illum odio nulla numquam? Libero incidunt, iste veniam eligendi, cupiditate deleniti consectetur corporis, nemo tenetur dolorum pariatur doloremque perspiciatis repellendus fugiat quos necessitatibus dicta alias explicabo veritatis praesentium suscipit debitis quo? Sapiente error asperiores commodi distinctio culpa? Dicta eveniet nisi blanditiis ab nostrum sunt magnam illum tenetur consequuntur magni harum, ut labore deleniti cum ullam pariatur dolor? Illo doloremque, commodi exercitationem tempora voluptatem, molestiae alias rerum nihil quo soluta assumenda deserunt aliquid facere consequatur doloribus. Aut doloremque tempora aliquam magni dolorem distinctio ea error. Eos atque sequi corporis dolorum sed, consequuntur quam quasi facere aliquam temporibus magnam sint inventore soluta voluptatum maxime voluptas distinctio! Laboriosam excepturi quia illum modi ducimus corporis expedita veritatis, necessitatibus reiciendis labore doloribus aut placeat recusandae ab praesentium iste architecto ullam ratione facilis dolorem amet similique at tempora. Ea vel neque architecto labore reiciendis itaque voluptatibus consequatur at est? Possimus corrupti architecto, praesentium vitae reiciendis, error optio aliquid odio ex, facilis deleniti eaque? Beatae, quam vel voluptates quos architecto velit, laboriosam distinctio tenetur praesentium, et vitae. Ipsum modi quis, dolor porro blanditiis tempore corrupti illum. Vitae pariatur quidem magnam neque labore assumenda possimus. Odio commodi magni excepturi ad, suscipit laboriosam! Maxime pariatur enim voluptatem ad, modi aperiam consectetur saepe consequuntur? Autem temporibus delectus quod facere laudantium nihil blanditiis sit fugiat, eveniet laborum, provident reiciendis deserunt alias magnam molestias quo officia consequatur quas sunt eos dolor quasi, ipsa sequi inventore! Eum earum ipsam quos similique perferendis magnam iusto. Nam cumque, accusantium hic nesciunt culpa quod nostrum ratione blanditiis assumenda beatae alias aliquam vero sunt. Ab iusto dicta alias magnam atque nesciunt, similique, corporis voluptates id sequi, adipisci necessitatibus consequatur aliquid repudiandae veniam eius obcaecati ipsum asperiores minima aut. Delectus nisi aliquid illo nam! Fuga cumque reiciendis officiis distinctio iure repellendus molestiae asperiores itaque doloribus hic maiores consequuntur iusto natus dignissimos, assumenda, minima nesciunt labore incidunt. Blanditiis neque deleniti fuga molestiae velit quae soluta autem eum eos iure error vero amet doloribus, accusamus suscipit, dolore ut nisi quo quidem rerum repellendus a aliquam quisquam. Culpa tenetur blanditiis sapiente. Vitae hic beatae aliquam expedita esse fugit quidem provident harum, ea repellendus mollitia necessitatibus maxime sapiente voluptas obcaecati inventore? Numquam quod ex reiciendis officiis iste perferendis. Autem, culpa! Eligendi, perferendis. Distinctio iusto perspiciatis recusandae amet ipsam repellendus nobis natus modi numquam nulla debitis eaque culpa, asperiores doloribus?
       </p>
          </div>
+   </section> -->
+
+   <header class="header">
+      <div class="container">
+         <div class="header__body">
+            <a href="#" class="logo">
+               <svg class="logo__image">
+                  <use href="./images/sprite.svg#logo"></use>
+               </svg>
+            </a>
+            <a href="#" class="logo-mobile">
+               <svg class="logo__image">
+                  <use href="./images/sprite.svg#logo--mobile"></use>
+               </svg>
+            </a>
+            <div class="header__menu">
+               <div class="mobile-menu">
+                  <!-- <div class="container"> -->
+                     <a href="#" class="logo-menu-tablet">
+                        <svg class="logo__image">
+                           <use href="./images/sprite.svg#logo--tablet-menu"></use>
+                        </svg>
+                     </a>
+                     <a href="#" class="logo-menu-mobile">
+                        <svg class="logo__image">
+                           <use href="./images/sprite.svg#logo--mobile-menu"></use>
+                        </svg>
+                     </a>
+                     <div class="burger-close"></div>
+                  <!-- </div> -->
+               </div>
+               <nav class="menu">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a href="#" class="menu__link">menu</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">menu</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">menu</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">menu</a></li>
+                     <li class="menu__item"><a href="#" class="menu__link">menu</a></li>
+                  </ul>
+               </nav>
+               <button class="btn">Подписаться!</button>
+            </div>
+            <div class="burger"></div>
+         </div>
+      </div>
+   </header>
+ <section class="about">
+      <div class="container">
+         <!-- <div class="box"></div> -->
+         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus expedita ipsa minus facilis ipsum delectus
+            optio vitae a natus distinctio asperiores perspiciatis quo commodi, voluptas aperiam explicabo! Eveniet at
+            dolore, illo obcaecati animi placeat fugiat illum inventore quisquam quam repellat incidunt id sequi deserunt,
+            vel ab provident? Accusamus dicta harum blanditiis quibusdam et sed sit velit odio odit ex tempora vel eos
+            eveniet repellendus eaque reprehenderit aperiam necessitatibus dolor eius quia quae sequi, libero, in autem.
+            Eveniet velit, consectetur et vero iste omnis, rerum repellendus libero nemo ea beatae quisquam dolor dolorum
+            optio. Maiores expedita quisquam consequatur eius at hic, qui ullam architecto vel repudiandae, quod
+            accusantium ipsum veniam nam animi cum dolor illum odio nulla numquam? Libero incidunt, iste veniam eligendi,
+            cupiditate deleniti consectetur corporis, nemo tenetur dolorum pariatur doloremque perspiciatis repellendus
+            fugiat quos necessitatibus dicta alias explicabo veritatis praesentium suscipit debitis quo? Sapiente error
+            asperiores commodi distinctio culpa? Dicta eveniet nisi blanditiis ab nostrum sunt magnam illum tenetur
+            consequuntur magni harum, ut labore deleniti cum ullam pariatur dolor? Illo doloremque, commodi exercitationem
+            tempora voluptatem, molestiae alias rerum nihil quo soluta assumenda deserunt aliquid facere consequatur
+            doloribus. Aut doloremque tempora aliquam magni dolorem distinctio ea error. Eos atque sequi corporis dolorum
+            sed, consequuntur quam quasi facere aliquam temporibus magnam sint inventore soluta voluptatum maxime voluptas
+            distinctio! Laboriosam excepturi quia illum modi ducimus corporis expedita veritatis, necessitatibus reiciendis
+            labore doloribus aut placeat recusandae ab praesentium iste architecto ullam ratione facilis dolorem amet
+            similique at tempora. Ea vel neque architecto labore reiciendis itaque voluptatibus consequatur at est?
+            Possimus corrupti architecto, praesentium vitae reiciendis, error optio aliquid odio ex, facilis deleniti
+            eaque? Beatae, quam vel voluptates quos architecto velit, laboriosam distinctio tenetur praesentium, et vitae.
+            Ipsum modi quis, dolor porro blanditiis tempore corrupti illum. Vitae pariatur quidem magnam neque labore
+            assumenda possimus. Odio commodi magni excepturi ad, suscipit laboriosam! Maxime pariatur enim voluptatem ad,
+            modi aperiam consectetur saepe consequuntur? Autem temporibus delectus quod facere laudantium nihil blanditiis
+            sit fugiat, eveniet laborum, provident reiciendis deserunt alias magnam molestias quo officia consequatur quas
+            sunt eos dolor quasi, ipsa sequi inventore! Eum earum ipsam quos similique perferendis magnam iusto. Nam
+            cumque, accusantium hic nesciunt culpa quod nostrum ratione blanditiis assumenda beatae alias aliquam vero
+            sunt. Ab iusto dicta alias magnam atque nesciunt, similique, corporis voluptates id sequi, adipisci
+            necessitatibus consequatur aliquid repudiandae veniam eius obcaecati ipsum asperiores minima aut. Delectus nisi
+            aliquid illo nam! Fuga cumque reiciendis officiis distinctio iure repellendus molestiae asperiores itaque
+            doloribus hic maiores consequuntur iusto natus dignissimos, assumenda, minima nesciunt labore incidunt.
+            Blanditiis neque deleniti fuga molestiae velit quae soluta autem eum eos iure error vero amet doloribus,
+            accusamus suscipit, dolore ut nisi quo quidem rerum repellendus a aliquam quisquam. Culpa tenetur blanditiis
+            sapiente. Vitae hic beatae aliquam expedita esse fugit quidem provident harum, ea repellendus mollitia
+            necessitatibus maxime sapiente voluptas obcaecati inventore? Numquam quod ex reiciendis officiis iste
+            perferendis. Autem, culpa! Eligendi, perferendis. Distinctio iusto perspiciatis recusandae amet ipsam
+            repellendus nobis natus modi numquam nulla debitis eaque culpa, asperiores doloribus?
+         </p>
+      </div>
    </section>
 
    <script src="./js/menu.js"></script>
