--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   
                </div>
 
-               <button class="btn">Подписаться!</button>
+               <button class="btn">Консультация по телефону</button>
 
             </div>
             
