--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
    </header>
 
    <section class="hero">
-      <div class="hero__wrapper">
+      <div class="hero__top">
          <div class="container">
             <div class="hero__body">
                <h1 class="hero__title">Комплексная подготовка к ВНО<br> по английскому языку</h1>
@@ -115,6 +115,13 @@
                <button type="button" class="btn">хочу на бесплатное занятие</button>
             </div>
          </div>
+      </div>
+      <div class="hero__bottom">
+         <ul class="hero__list">
+            <li class="hero__item">Адаптированная авторская программа ВНО</li>
+            <li class="hero__item">Современные методики обучения</li>
+            <li class="hero__item">Финансовая гарантия результата</li>
+         </ul>
       </div>
    </section>
 
