--- a/index.html
+++ b/index.html
@@ -117,11 +117,13 @@
          </div>
       </div>
       <div class="hero__bottom">
-         <ul class="hero__list">
-            <li class="hero__item">Адаптированная авторская программа ВНО</li>
-            <li class="hero__item">Современные методики обучения</li>
-            <li class="hero__item">Финансовая гарантия результата</li>
-         </ul>
+         <div class="container">
+            <ul class="hero__list">
+               <li class="hero__item">Адаптированная авторская программа ВНО</li>
+               <li class="hero__item">Современные методики обучения</li>
+               <li class="hero__item">Финансовая гарантия результата</li>
+            </ul>
+         </div>
       </div>
    </section>
 
