--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
             <use href="./images/new/new-sprite.svg#fire"></use>
          </svg>
       </a>
+      <a href="#" class="logo">
+         <svg class="letters">
+            <use href="./images/new/new-sprite.svg#letters"></use>
+         </svg>
+         <svg class="fire2">
+            <use href="./images/new/new-sprite.svg#fire"></use>
+         </svg>
+      </a>
+      <a href="#" class="logo">
+         <svg class="letters">
+            <use href="./images/new/new-sprite.svg#letters"></use>
+         </svg>
+         <svg class="fire3">
+            <use href="./images/new/new-sprite.svg#fire"></use>
+         </svg>
+      </a>
    </div>
    
 
