--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             <use href="./images/new/new-sprite.svg#fire"></use>
          </svg>
       </a>
+      <a href="#" class="logo">
+         <svg class="letters">
+            <use href="./images/new/new-sprite.svg#letters"></use>
+         </svg>
+         <svg class="fire4">
+            <use href="./images/new/new-sprite.svg#fire"></use>
+         </svg>
+      </a>
    </div>
    
 
